<resources>
    <string name="app_name">NearbyDiscosNEvents</string>
    <string name="username_login_hint">Correo electronico o celular</string>
    <string name="pass_login_hint">Password</string>
    <string name="or_text">o prueba</string>
    <string name="btn_facebook_login_text">Ingresar con Facebook</string>
    <string name="login_button_text">Ingresar</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="olvidaste_tus_datos">Olvidaste tus datos?</string>
    <string name="register_name">Nombres</string>
    <string name="register_label">Crear Cuenta</string>
    <string name="register_lastname">Apellidos</string>
    <string name="register_genre">Genero</string>
    <string name="register_address">Direccion</string>
    <string name="register_phone">Celular</string>
    <string name="register_email">Correo electronico</string>
    <string name="register_button_text">Registrarme</string>
    <string name="already_registered">Ya tienes una cuenta? Ingresa</string>
    <string name="loading">Procesando</string>
    <string name="home_nav">Inicio</string>
    <string name="search_nav">Buscar</string>
    <string name="profile_nav">Perfil</string>
    <string name="more_nav">Mas</string>
    <string name="mountain_resort">Mountain Resort</string>
    <string name="address_example">Waikiki, 4.5 km from center</string>
    <string name="mini_detail_event">Ocean View 1 king Bed \n No prepayment</string>
    <string name="price_detail">S/. 850</string>
    <string name="ranking_detail">4.5</string>
    <string name="followed">Seguidores</string>
    <string name="followers">Seguidores</string>
    <string name="description_first_register_step">Empieza Ingresando</string>
    <string name="description_two_first_registration_step">Empieza Ingresando \ntus datos personales</string>
    <string name="register_first_step">Empezar</string>
    <string name="text_step_one">1</string>
    <string name="text_step_two">2</string>
    <string name="Datos_personales">Datos personales</string>
    <string name="datos_de_usuario">Ahora crea tu cuenta!</string>
    <string name="btn_second_step_text">Crear cuenta</string>
    <string name="c_mo_te_llamas">¿Cómo te llamas?</string>
    <string name="document_number">Numero de documento</string>
    <string name="Fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="username_register">Nombre de usuario</string>
</resources>
