<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bg"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:weightSum="9">

        <TextView
            android:id="@+id/tvCrearCuenta"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_label"
            android:textAllCaps="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:textSize="20dp"
            />

        <EditText
            android:background="@drawable/rounded_edittext_2"
            android:textAllCaps="true"
            android:gravity="center"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:hint="@string/register_name"
            android:textColorHint="@color/hint_color_primary"
            />

        <EditText
            android:background="@drawable/rounded_edittext_2"
            android:textAllCaps="true"
            android:gravity="center"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:hint="@string/register_lastname"
            android:textColorHint="@color/hint_color_primary"
            />

        <EditText
            android:background="@drawable/rounded_edittext_2"
            android:textAllCaps="true"
            android:gravity="center"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:hint="@string/register_genre"
            android:textColorHint="@color/hint_color_primary"
            />

        <EditText
            android:background="@drawable/rounded_edittext_2"
            android:textAllCaps="true"
            android:gravity="center"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:hint="@string/register_address"
            android:textColorHint="@color/hint_color_primary"
            />

        <EditText
            android:background="@drawable/rounded_edittext_2"
            android:textAllCaps="true"
            android:gravity="center"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:hint="@string/register_phone"
            android:textColorHint="@color/hint_color_primary"
            />

        <EditText
            android:background="@drawable/rounded_edittext_2"
            android:textAllCaps="true"
            android:gravity="center"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:hint="@string/register_email"
            android:textColorHint="@color/hint_color_primary"
            />

        <FrameLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            >

            <EditText
                android:id="@+id/edtPasswprd"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/rounded_edittext_2"
                android:gravity="center"
                android:hint="@string/pass_login_hint"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingRight="30dp"
                android:textColor="@android:color/white"
                android:textColorHint="@color/hint_color_primary" />

            <CheckBox
                android:id="@+id/btnShowHidePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"

                android:button="@drawable/custom_show_hide_button" />

        </FrameLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:textAllCaps="true"
            android:text="@string/login_button_text"
            android:textColor="@android:color/white"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textAllCaps="true"
            android:text="@string/already_registered" />

    </LinearLayout>


</RelativeLayout>