<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/cardViewRegisterSecondStep"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        >

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/metCellPhoneUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_phone"
            android:inputType="number"
            android:textColor="@color/secondary_color_material_edit_text"
            android:textColorHint="@color/secondary_color_material_edit_text"
            android:textSize="20sp"

            app:met_singleLineEllipsis="true"
            app:met_baseColor="@color/secondary_color_material_edit_text"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/primary_color_material_edit_text"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/metUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_register"
            android:inputType="text"
            android:textColor="@color/secondary_color_material_edit_text"
            android:textColorHint="@color/secondary_color_material_edit_text"
            android:textSize="20sp"

            app:met_singleLineEllipsis="true"
            app:met_baseColor="@color/secondary_color_material_edit_text"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/primary_color_material_edit_text"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/metPasswordUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass_login_hint"
            android:inputType="text"
            android:textColor="@color/secondary_color_material_edit_text"
            android:textColorHint="@color/secondary_color_material_edit_text"
            android:textSize="20sp"

            app:met_singleLineEllipsis="true"
            app:met_baseColor="@color/secondary_color_material_edit_text"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/primary_color_material_edit_text"
            />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/metEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/secondary_color_material_edit_text"
            android:textColorHint="@color/secondary_color_material_edit_text"
            android:textSize="20sp"

            app:met_singleLineEllipsis="true"
            app:met_baseColor="@color/secondary_color_material_edit_text"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/primary_color_material_edit_text"
            />


    </LinearLayout>

</androidx.cardview.widget.CardView>