<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/cardViewRegisterFirstStep"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        >

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/metNamesPersonalData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/c_mo_te_llamas"
        android:inputType="text"
        android:textColor="@color/secondary_color_material_edit_text"
        android:textColorHint="@color/secondary_color_material_edit_text"
        android:textSize="20sp"

        app:met_singleLineEllipsis="true"
        app:met_baseColor="@color/secondary_color_material_edit_text"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/primary_color_material_edit_text"
        />

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/spinnerTypeDocument"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ms_multiline="true"
            app:ms_arrowColor="@color/primary_color"
            app:ms_arrowSize="16dp"
            app:ms_floatingLabelColor="@color/primary_color_material_edit_text"
            app:ms_floatingLabelText="Tipo de Documento"
            app:ms_hint="Seleccione Tipo de Documento"
            app:ms_hintColor="@color/secondary_color_material_edit_text"
            />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/metDocumentNumberPersonalData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/document_number"
        android:inputType="number"
        android:textColor="@color/secondary_color_material_edit_text"
        android:textColorHint="@color/secondary_color_material_edit_text"
        android:textSize="20sp"
        app:met_singleLineEllipsis="true"
        app:met_baseColor="@color/secondary_color_material_edit_text"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/primary_color_material_edit_text"
        />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/metBirthDatePersonalData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Fecha_de_nacimiento"
            android:inputType="date"
            android:textColor="@color/secondary_color_material_edit_text"
            android:textColorHint="@color/secondary_color_material_edit_text"
            android:textSize="20sp"

            app:met_singleLineEllipsis="true"
            app:met_baseColor="@color/secondary_color_material_edit_text"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/primary_color_material_edit_text"
            />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/metAddressPersonalData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_address"
            android:inputType="text"
            android:textColor="@color/secondary_color_material_edit_text"
            android:textColorHint="@color/secondary_color_material_edit_text"
            android:textSize="20sp"

            app:met_singleLineEllipsis="true"
            app:met_baseColor="@color/secondary_color_material_edit_text"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/primary_color_material_edit_text"
            />

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/spinnerGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ms_multiline="true"
            app:ms_arrowColor="@color/primary_color"
            app:ms_arrowSize="16dp"
            app:ms_floatingLabelColor="@color/primary_color_material_edit_text"
            app:ms_floatingLabelText="Genero"
            app:ms_hint="Seleccione"
            app:ms_hintColor="@color/secondary_color_material_edit_text"
            />


    </LinearLayout>

</androidx.cardview.widget.CardView>